--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^3.2.1",
+    "currency.js": "^2.0.4",
+    "date-fns": "^2.21.3",
     "evergreen-ui": "^6.0.1",
+    "install": "^0.13.0",
+    "npm": "^7.14.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-text-mask": "^5.4.3",
+    "text-mask-addons": "^3.8.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
