--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.21.3",
     "evergreen-ui": "^6.0.1",
     "install": "^0.13.0",
+    "lodash": "^4.17.21",
     "npm": "^7.14.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
